make-a-wish-salesforce/src/objects/GETGSI__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>GETGSI__Commit_Id__c</fullName>
        <label>Commit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETGSI__Error_Log__c</fullName>
        <label>Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GETGSI__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETGSI__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; GETGSI__Record_Id__c  , &quot;Record Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>GETGSI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>